--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -67,6 +67,6 @@ services:
       DATABASE_DUMP_BUCKET: database-dump-bucket
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
-      AWS_ENDPOINT_URL: http://localhost:4566
+      AWS_ENDPOINT_URL: http://localstack:4566
     volumes:
       - ./tests/integration_tests/init-s3.py:/etc/localstack/init/ready.d/init-s3.py
