--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -24,13 +24,14 @@ services:
       # Bulk import
       SLACK_WEBHOOK_URL: skip
       BULK_IMPORT_BUCKET: bulk-import-bucket
+
       # Db dump
       DATABASE_DUMP_BUCKET: database-dump-bucket
 
       # localstack
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
-      AWS_ENDPOINT_URL: https://eu-west-1.console.aws.amazon.com/
+      AWS_ENDPOINT_URL: http://localstack:4566
     depends_on:
       postgres:
         condition: service_healthy
@@ -67,6 +68,6 @@ services:
       DATABASE_DUMP_BUCKET: database-dump-bucket
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
-      AWS_ENDPOINT_URL: http://localstack:4566
+      AWS_ENDPOINT_URL: http://localhost:4566
     volumes:
       - ./tests/integration_tests/init-s3.py:/etc/localstack/init/ready.d/init-s3.py
