--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ POSTGRES_PASSWORD=password
 # If you're using `make dev` you will need to use the staging value
 SECRET_KEY=secret_test_key
 TOKEN_SECRET_KEY=secret_token_key
+
+# Test bucket for database dumps
+DATABASE_DUMP_BUCKET=database-dump-bucket
