--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,10 @@ fastapi-cli = "^0.0.5"
 pytest-watch = "^4.2.0"
 fastapi-utils = { version = "0.8.0", extras = ["all"] }
 python-dateutil = "^2.9.0.post0"
+opentelemetry-sdk = "^1.34.1"
+opentelemetry-instrumentation-fastapi = "^0.55b1"
+opentelemetry-exporter-otlp = "^1.34.1"
+opentelemetry-instrumentation-sqlalchemy = "^0.55b1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^3.8.0"
