--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,8 +4,17 @@ updates:
     directory: /
     schedule:
       interval: monthly
+    groups:
+      # Major updates will be raised as separate PRs by default
+      minor-and-patch:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
     ignore:
       - dependency-name: db-client
+
   - package-ecosystem: github-actions
     directory: /
     schedule:
