--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ opentelemetry-sdk = ">=1.33.0"
 opentelemetry-exporter-otlp = ">=1.33.0"
 opentelemetry-instrumentation-sqlalchemy = ">=0.54b0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pre-commit = "^3.8.0"
 python-dotenv = "^1.1.0"
 pytest = "^8.4.2"
