--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -18,7 +18,7 @@ RUN apt-get update && \
 
 RUN pip install --no-cache-dir poetry==2.2.1
 COPY poetry.lock pyproject.toml ./
-RUN poetry config virtualenvs.create false && poetry install --no-directory --no-root
+RUN poetry config virtualenvs.create false && poetry install --no-root
 
 COPY ./app ./app
 COPY service-manifest.json .
