--- a/Dockerfile.webapp
+++ b/Dockerfile.webapp
@@ -16,9 +16,9 @@ RUN apt-get update && \
     postgresql-client && \
     rm -rf /var/lib/apt/lists/*
 
-RUN pip install --no-cache-dir poetry==2.2.1
+RUN pip install --no-cache-dir poetry==2.0.1
 COPY poetry.lock pyproject.toml ./
-RUN poetry config virtualenvs.create false && poetry install --no-directory --no-root
+RUN poetry config virtualenvs.create false && poetry install --no-root
 
 COPY ./app ./app
 COPY service-manifest.json .
