--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,6 +1,9 @@
 name: Deploy admin backend to production
 on:
   workflow_dispatch: {}
+  # Mon-Thur 09:00 & 12:00
+  schedule:
+    - cron: 0 9,12 * * 1-5
 permissions:
   id-token: write
   contents: read
